
syntax = "proto3";

package image;

message Image {
  bytes pixels = 1;
  int32 width = 2;
  int32 height = 3;
}

message UploadImageRequest {
  Image image = 1;
}

message UploadImageResponse {
  Image result = 1;
}

message ImageChunk {
  bytes data = 1;
}

// Сервис
service ImageAnalysis {
  // Обработка изображения: клиент отправляет, сервер возвращает обработанное
  rpc Process(UploadImageRequest) returns (UploadImageResponse);
}